manifests/application/p8-stack/components/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: p8-api
  labels:
    app.kubernetes.io/name: p8-api
    app.kubernetes.io/component: api
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: p8-api
    app.kubernetes.io/component: api
